force-app/main/default/objects/Selected_Loot_Items__c/Selected_Loot_Items__c.object-meta.xml
<CustomObject>
    <label>Selected Loot Item</label>
    <nameField>
        <displayFormat>SLI-{000000}</displayFormat>
        <label>Selected Loot Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Loot Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>