force-app/main/default/objects/Selected_Loot_Items__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>