force-app/main/default/objects/Selected_Loot_Items__c/fields/Prize__c.field-meta.xml
<CustomField>
    <fullName>Prize__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prize</label>
    <referenceTo>Campaign_Prize_Item__c</referenceTo>
    <relationshipLabel>Selected Loot Items</relationshipLabel>
    <relationshipName>Selected_Loot_Items</relationshipName>
    <type>Lookup</type>
</CustomField>